{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 6,
  "lineage": "3c8257b5-0e9f-a5ec-7754-e56e5fd0e26f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227029466918:security-group/sg-0a4e76f94019eee2f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a4e76f94019eee2f",
            "ingress": [],
            "name": "app_firewall",
            "name_prefix": "",
            "owner_id": "227029466918",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreationDate": "date-12-03-2025",
              "Team": "security-team"
            },
            "tags_all": {
              "CreationDate": "date-12-03-2025",
              "Team": "security-team"
            },
            "timeouts": null,
            "vpc_id": "vpc-058b3d61cff17bf77"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:227029466918:security-group/sg-012f3010196661b47",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-012f3010196661b47",
            "ingress": [],
            "name": "db_firewall",
            "name_prefix": "",
            "owner_id": "227029466918",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreationDate": "date-12-03-2025",
              "Team": "security-team"
            },
            "tags_all": {
              "CreationDate": "date-12-03-2025",
              "Team": "security-team"
            },
            "timeouts": null,
            "vpc_id": "vpc-058b3d61cff17bf77"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}